--- a/lecciones/05_preprocesamiento/index.html
+++ b/lecciones/05_preprocesamiento/index.html
@@ -177,11 +177,14 @@
 <li><p>manejo de texto</p>
 
 <ul>
+<li>tolower/toupper</li>
+<li>strsplit</li>
 <li>gsub</li>
 <li>grep/grepl</li>
 <li>str_trim</li>
-<li>strsplit</li>
-<li>tolower</li>
+<li>nchar</li>
+<li>paste</li>
+<li>substr</li>
 </ul></li>
 <li><p>merge</p></li>
 <li><p>dplyr</p>
@@ -202,16 +205,14 @@
     <h2>Partición</h2>
   </hgroup>
   <article data-timings="">
-    <pre><code class="r">x = data.frame(&#39;var1&#39;=sample(1:5),&#39;var2&#39;=sample(6:10),&#39;var3&#39;=sample(11:15))
+    <pre><code class="r">x = data.frame(&#39;var1&#39;=sample(1:3),&#39;var2&#39;=sample(6:8),&#39;var3&#39;=sample(11:13))
 x
 </code></pre>
 
 <pre><code>##   var1 var2 var3
-## 1    5    6   13
-## 2    3    9   12
-## 3    1    7   11
-## 4    4   10   15
-## 5    2    8   14
+## 1    1    8   13
+## 2    2    6   12
+## 3    3    7   11
 </code></pre>
 
 <p>Todos los registros de la columna indicada por su respectivo indice</p>
@@ -219,7 +220,7 @@ x
 <pre><code class="r">x[,1]
 </code></pre>
 
-<pre><code>## [1] 5 3 1 4 2
+<pre><code>## [1] 1 2 3
 </code></pre>
 
   </article>
@@ -236,7 +237,7 @@ x
 <pre><code class="r">x[,&#39;var1&#39;]
 </code></pre>
 
-<pre><code>## [1] 5 3 1 4 2
+<pre><code>## [1] 1 2 3
 </code></pre>
 
 <p>Los registros indicados por sus respectivos indices</p>
@@ -244,7 +245,7 @@ x
 <pre><code class="r">x[1:2,&#39;var2&#39;]
 </code></pre>
 
-<pre><code>## [1] 6 9
+<pre><code>## [1] 8 6
 </code></pre>
 
   </article>
@@ -260,22 +261,220 @@ x
 </code></pre>
 
 <pre><code>##   var1 var2 var3
-## 2    3    9   12
-## 5    2    8   14
+## 1    1    8   13
+## 2    2    6   12
 </code></pre>
 
 <pre><code class="r">x[(x$var1 &lt;= 3 | x$var3 &gt; 15),]   # OR
 </code></pre>
 
 <pre><code>##   var1 var2 var3
-## 2    3    9   12
-## 3    1    7   11
-## 5    2    8   14
+## 1    1    8   13
+## 2    2    6   12
+## 3    3    7   11
 </code></pre>
 
-<p class='..</p>
+  </article>
+  <!-- Presenter Notes -->
+</slide>
 
- '></article>
+<slide class="" id="slide-10" style="background:;">
+  <hgroup>
+    <h2>Ordenamiento</h2>
+  </hgroup>
+  <article data-timings="">
+    <pre><code>##   var1 var2 var3
+## 1    1    8   13
+## 2    2    6   12
+## 3    3    7   11
+</code></pre>
+
+<pre><code class="r">sort(x$var1)  # ordenamiento ascendente por defecto
+</code></pre>
+
+<pre><code>## [1] 1 2 3
+</code></pre>
+
+<pre><code class="r">sort(x$var1,decreasing=TRUE)
+</code></pre>
+
+<pre><code>## [1] 3 2 1
+</code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-11" style="background:;">
+  <hgroup>
+    <h2>Texto a minúscula/mayúscula</h2>
+  </hgroup>
+  <article data-timings="">
+    <pre><code class="r">becal[1:5,&#39;Sexo&#39;]
+</code></pre>
+
+<pre><code>## [1] &quot;Femenino&quot;  &quot;Masculino&quot; &quot;Masculino&quot; &quot;Femenino&quot;  &quot;Femenino&quot;
+</code></pre>
+
+<pre><code class="r">tolower(becal[,&#39;Sexo&#39;])[1:5]   # convertir todas las letras de la palabra a minúsculas
+</code></pre>
+
+<pre><code>## [1] &quot;femenino&quot;  &quot;masculino&quot; &quot;masculino&quot; &quot;femenino&quot;  &quot;femenino&quot;
+</code></pre>
+
+<pre><code class="r">toupper(becal[,&#39;Sexo&#39;])[1:5]   # convertir todas las letras de la palabra a mayúsculas
+</code></pre>
+
+<pre><code>## [1] &quot;FEMENINO&quot;  &quot;MASCULINO&quot; &quot;MASCULINO&quot; &quot;FEMENINO&quot;  &quot;FEMENINO&quot;
+</code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-12" style="background:;">
+  <hgroup>
+    <h2>strplit: divir texto</h2>
+  </hgroup>
+  <article data-timings="">
+    <pre><code class="r">becal[1:2,&#39;Fecha.firma.de.Contrato&#39;]
+</code></pre>
+
+<pre><code>## [1] &quot;9/15/2015&quot; &quot;9/9/2015&quot;
+</code></pre>
+
+<pre><code class="r">strsplit(becal[1:2,&#39;Fecha.firma.de.Contrato&#39;], &#39;/&#39;)  # divir el texto de fecha utilizando la barra como separador 
+</code></pre>
+
+<pre><code>## [[1]]
+## [1] &quot;9&quot;    &quot;15&quot;   &quot;2015&quot;
+## 
+## [[2]]
+## [1] &quot;9&quot;    &quot;9&quot;    &quot;2015&quot;
+</code></pre>
+
+<pre><code>## [1] &quot;9&quot;    &quot;15&quot;   &quot;2015&quot;
+</code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-13" style="background:;">
+  <hgroup>
+    <h2>gsub: remplazar caracter en texto</h2>
+  </hgroup>
+  <article data-timings="">
+    <pre><code class="r">becal[1:2,&#39;C.I.&#39;]
+</code></pre>
+
+<pre><code>## [1] &quot; 2,485,187 &quot; &quot; 2,271,427 &quot;
+</code></pre>
+
+<pre><code class="r">gsub(&#39;,&#39;, &#39;&#39;, becal[,&#39;C.I.&#39;])[1:2]   # eliminar (o remplazar por vacio) las comas del texto cédula
+</code></pre>
+
+<pre><code>## [1] &quot; 2485187 &quot; &quot; 2271427 &quot;
+</code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-14" style="background:;">
+  <hgroup>
+    <h2>grep/grepl: búscar caracteres en texto</h2>
+  </hgroup>
+  <article data-timings="">
+    <pre><code class="r">becal_c[c(1,210,843),&#39;Total.General&#39;]
+</code></pre>
+
+<pre><code>## [1] &quot;$             82.896&quot;  &quot;$             3 0.668&quot; &quot;€ 23.570,05&quot;
+</code></pre>
+
+<pre><code class="r">grep(&#39;€&#39;,becal_c[c(1,210,843),&#39;Total.General&#39;])  # buscar la presenciar de caracter euro
+</code></pre>
+
+<pre><code>## [1] 3
+</code></pre>
+
+<pre><code class="r">grepl(&#39;€&#39;,becal_c[c(1,210,843),&#39;Total.General&#39;])  # buscar la presenciar de caracter euro
+</code></pre>
+
+<pre><code>## [1] FALSE FALSE  TRUE
+</code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-15" style="background:;">
+  <hgroup>
+    <h2>str_trim: eliminación de espacios vacíos redundantes</h2>
+  </hgroup>
+  <article data-timings="">
+    <pre><code class="r">becal[1:2,&#39;Condición&#39;]
+</code></pre>
+
+<pre><code>## [1] &quot;Becario &quot; &quot;Becario &quot;
+</code></pre>
+
+<pre><code class="r">str_trim(becal[1:2,&#39;Condición&#39;])  # eliminar espacios vacío al inicio y final del texto
+</code></pre>
+
+<pre><code>## [1] &quot;Becario&quot; &quot;Becario&quot;
+</code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-16" style="background:;">
+  <hgroup>
+    <h2>Otras funciones de manejo de texto</h2>
+  </hgroup>
+  <article data-timings="">
+    <pre><code class="r">becal_c[1,&#39;Universidad.de.Destino&#39;]
+</code></pre>
+
+<pre><code>## [1] &quot;Universidad de Chile&quot;
+</code></pre>
+
+<pre><code class="r">nchar(becal_c[1,&#39;Universidad.de.Destino&#39;])  # contar el número de caracteres del texto
+</code></pre>
+
+<pre><code>## [1] 20
+</code></pre>
+
+<pre><code class="r">substr(becal_c[1,&#39;Universidad.de.Destino&#39;],16,20)  # extraer parte del texto
+</code></pre>
+
+<pre><code>## [1] &quot;Chile&quot;
+</code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-17" style="background:;">
+  <hgroup>
+    <h2>Otras funciones de manejo de texto</h2>
+  </hgroup>
+  <article data-timings="">
+    <pre><code class="r">becal_c[1,c(5,6)]
+</code></pre>
+
+<pre><code>##                   Maestria...Doctorado Universidad.de.Destino
+## 1 Doctorado en Biotecnología Molecular   Universidad de Chile
+</code></pre>
+
+<pre><code class="r">paste0(becal_c[1,5],&#39; (&#39;,becal_c[1,6],&#39;)&#39;)
+</code></pre>
+
+<pre><code>## [1] &quot;Doctorado en Biotecnología Molecular (Universidad de Chile)&quot;
+</code></pre>
+
+  </article>
   <!-- Presenter Notes -->
 </slide>
 
@@ -335,6 +534,54 @@ x
       <a href="#" target="_self" rel='tooltip' 
         data-slide=9 title='Partición con expresiones lógicas'>
          9
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=10 title='Ordenamiento'>
+         10
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=11 title='Texto a minúscula/mayúscula'>
+         11
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=12 title='strplit: divir texto'>
+         12
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=13 title='gsub: remplazar caracter en texto'>
+         13
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=14 title='grep/grepl: búscar caracteres en texto'>
+         14
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=15 title='str_trim: eliminación de espacios vacíos redundantes'>
+         15
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=16 title='Otras funciones de manejo de texto'>
+         16
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=17 title='Otras funciones de manejo de texto'>
+         17
       </a>
     </li>
   </ul>
