--- a/lecciones/05_preprocesamiento/index.html
+++ b/lecciones/05_preprocesamiento/index.html
@@ -511,7 +511,7 @@ x
     <h2>Manipulación de data frames con dplyr</h2>
   </hgroup>
   <article data-timings="">
-    <p>Dyplyr es un paquete de funcionalidades de R que permite manipular frames de datos de forma conveniente. Sus principales funciones son:</p>
+    <p>Dplyr es un paquete de funcionalidades de R que permite manipular frames de datos de forma conveniente. Sus principales funciones son:</p>
 
 <ul>
 <li><p><code>select</code>: obtener un subconjunto de las columnas seleccionadas del data frame</p></li>
