--- a/lecciones/05_preprocesamiento/index.html
+++ b/lecciones/05_preprocesamiento/index.html
@@ -394,13 +394,13 @@ x
 <pre><code>## [1] &quot;$             82.896&quot;  &quot;$             3 0.668&quot; &quot;€ 23.570,05&quot;
 </code></pre>
 
-<pre><code class="r">grep(&#39;€&#39;,becal_c[c(1,210,843),&#39;Total.General&#39;])  # buscar la presenciar de caracter euro
+<pre><code class="r">grep(&#39;€&#39;,becal_c[c(1,210,843),&#39;Total.General&#39;])  # buscar la presencia del caracter euro
 </code></pre>
 
 <pre><code>## [1] 3
 </code></pre>
 
-<pre><code class="r">grepl(&#39;€&#39;,becal_c[c(1,210,843),&#39;Total.General&#39;])  # buscar la presenciar de caracter euro
+<pre><code class="r">grepl(&#39;€&#39;,becal_c[c(1,210,843),&#39;Total.General&#39;])  # buscar la presencia del caracter euro
 </code></pre>
 
 <pre><code>## [1] FALSE FALSE  TRUE
