--- a/lecciones/06_eda/index.html
+++ b/lecciones/06_eda/index.html
@@ -211,6 +211,49 @@
 </slide>
 
 <slide class="" id="slide-10" style="background:;">
+  <article data-timings="">
+    
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-11" style="background:;">
+  <hgroup>
+    <h2>Boxplots</h2>
+  </hgroup>
+  <article data-timings="">
+    
+<div style='float:left;width:48%;' class='centered'>
+  <ul>
+<li><p>Permite tener una vista general de la distribución de una variable</p></li>
+<li><p>Condensa en un solo gráfico información sobre el media de la distribución, los valores mínimo y máximo (excluyendo los outliers), el rango donde se encuentran el 50% de los valores (IQR)   </p></li>
+</ul>
+
+</div>
+<div style='float:right;width:48%;'>
+  <p><img class=center src="../assets/img/box-plot-explained.gif" height=450 /></p>
+
+</div>
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-12" style="background:;">
+  <hgroup>
+    <h2>Boxplots en R</h2>
+  </hgroup>
+  <article data-timings="">
+    <pre><code class="r">boxplot(becal$edad, col=&#39;red&#39;, main=&#39;Distribución de edad de becarios&#39;, 
+        ylab=&#39;Edad&#39;)
+</code></pre>
+
+<p><img src="assets/fig/unnamed-chunk-7-1.png" title="plot of chunk unnamed-chunk-7" alt="plot of chunk unnamed-chunk-7" style="display: block; margin: auto;" /></p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-13" style="background:;">
   <hgroup>
     <h2>Variabilidad de datos</h2>
   </hgroup>
@@ -240,7 +283,7 @@
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-11" style="background:;">
+<slide class="" id="slide-14" style="background:;">
   <hgroup>
     <h2>Distribución de variables categóricas</h2>
   </hgroup>
@@ -262,7 +305,7 @@
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-12" style="background:;">
+<slide class="" id="slide-15" style="background:;">
   <hgroup>
     <h2>Distribución de variables categóricas</h2>
   </hgroup>
@@ -276,13 +319,13 @@
         ylab=&quot;Total&quot;, xlab=&quot;Rango de ranking&quot;, col=&quot;blue&quot;)
 </code></pre>
 
-<p><img src="assets/fig/unnamed-chunk-10-1.png" title="plot of chunk unnamed-chunk-10" alt="plot of chunk unnamed-chunk-10" style="display: block; margin: auto;" /></p>
+<p><img src="assets/fig/unnamed-chunk-11-1.png" title="plot of chunk unnamed-chunk-11" alt="plot of chunk unnamed-chunk-11" style="display: block; margin: auto;" /></p>
 
   </article>
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-13" style="background:;">
+<slide class="" id="slide-16" style="background:;">
   <hgroup>
     <h2>Distribución de variables categóricas</h2>
   </hgroup>
@@ -298,13 +341,13 @@ barplot(categoria_ordenadas, main=paste(&quot;Becarios por rango de ranking de u
         nrow(becal_limpio),&quot;)&quot;), ylab=&quot;Total&quot;, xlab=&quot;Rango de ranking&quot;, col=&quot;blue&quot;)
 </code></pre>
 
-<p><img src="assets/fig/unnamed-chunk-12-1.png" title="plot of chunk unnamed-chunk-12" alt="plot of chunk unnamed-chunk-12" style="display: block; margin: auto;" /></p>
+<p><img src="assets/fig/unnamed-chunk-13-1.png" title="plot of chunk unnamed-chunk-13" alt="plot of chunk unnamed-chunk-13" style="display: block; margin: auto;" /></p>
 
   </article>
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-14" style="background:;">
+<slide class="" id="slide-17" style="background:;">
   <hgroup>
     <h2>Exploración de dos variables</h2>
   </hgroup>
@@ -319,13 +362,13 @@ barplot(categoria_ordenadas, main=paste(&quot;Becarios por rango de ranking de u
      main=&quot;Meses de Duración por Costo de Estudio&quot;)
 </code></pre>
 
-<p><img src="assets/fig/unnamed-chunk-13-1.png" title="plot of chunk unnamed-chunk-13" alt="plot of chunk unnamed-chunk-13" style="display: block; margin: auto;" /></p>
+<p><img src="assets/fig/unnamed-chunk-14-1.png" title="plot of chunk unnamed-chunk-14" alt="plot of chunk unnamed-chunk-14" style="display: block; margin: auto;" /></p>
 
   </article>
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-15" style="background:;">
+<slide class="" id="slide-18" style="background:;">
   <hgroup>
     <h2>Correlación</h2>
   </hgroup>
@@ -333,15 +376,52 @@ barplot(categoria_ordenadas, main=paste(&quot;Becarios por rango de ranking de u
     <ul>
 <li><p>En estadística una de la técnicas más comunes para el estudio de asociaciones entre variables es la <strong>correlación</strong></p></li>
 <li><p>La correlación mide que tanto dos variables se encuentran linealmente relacionadas. A diferencia de la covarianza que determina simplemente si dos variables cambian a la par, la correlación mide la fuerza de la relación entre ellas</p></li>
-<li><p>El resultado de una análisis de correlación es un coeficiente entre -1 y 1. Los extremos indican correlación perfecta entre las variables. Una correlación negativa indica que las variables cambian en sentido contrario, mientras que una correlación positiva demuestra que ambas variables cambian en la misma dirección</p></li>
-<li><p>En R correlación se calcula por medio de la función <code>cor</code></p></li>
 </ul>
 
-<pre><code class="r">cor(becal_sin_na$mesesdeduraciondeestudios, becal_sin_na$totalgralusd)
+<p>\[r = Cov(x,y)/Sx*Sy\]</p>
+
+<ul>
+<li>El resultado de una análisis de correlación es un coeficiente (r o Person&#39;s r) entre -1 y 1. Los extremos indican correlación perfecta entre las variables. Una correlación negativa indica que las variables cambian en sentido contrario, mientras que una correlación positiva demuestra que ambas variables cambian en la misma dirección</li>
+</ul>
+
+<p><img class=center src="../assets/img/correlation-examples.svg" height=150 /></p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-19" style="background:;">
+  <hgroup>
+    <h2>Correlación en R</h2>
+  </hgroup>
+  <article data-timings="">
+    <p>En R correlación de Person se calcula por medio de la función <code>cor</code></p>
+
+<pre><code class="r">becal_sin_na = filter(becal, totalgralusd != &#39;NA&#39;)  # elimino los valores ausentes
+cor(becal_sin_na$mesesdeduraciondeestudios, becal_sin_na$totalgralusd)
 </code></pre>
 
 <pre><code>## [1] 0.7211575
 </code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-20" style="background:;">
+  <hgroup>
+    <h2>Promedios condicionales</h2>
+  </hgroup>
+  <article data-timings="">
+    <pre><code class="r">groupo_meses = group_by(becal, mesesdeduraciondeestudios)
+total_x_gm = summarize(groupo_meses, 
+                       total_mean = mean(totalgralusd))
+plot(total_x_gm$mesesdeduraciondeestudios, total_x_gm$total_mean, 
+     ylab=&quot;Costo Total Promedio en USD&quot;, xlab=&quot;Duración Estudio en Meses&quot;,
+     main=&quot;Meses de Duración por Costo de Estudio&quot;)
+</code></pre>
+
+<p><img src="assets/fig/unnamed-chunk-17-1.png" title="plot of chunk unnamed-chunk-17" alt="plot of chunk unnamed-chunk-17" style="display: block; margin: auto;" /></p>
 
   </article>
   <!-- Presenter Notes -->
@@ -407,38 +487,68 @@ barplot(categoria_ordenadas, main=paste(&quot;Becarios por rango de ranking de u
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=10 title='Variabilidad de datos'>
+        data-slide=10 title='NA'>
          10
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=11 title='Distribución de variables categóricas'>
+        data-slide=11 title='Boxplots'>
          11
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=12 title='Distribución de variables categóricas'>
+        data-slide=12 title='Boxplots en R'>
          12
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=13 title='Distribución de variables categóricas'>
+        data-slide=13 title='Variabilidad de datos'>
          13
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=14 title='Exploración de dos variables'>
+        data-slide=14 title='Distribución de variables categóricas'>
          14
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=15 title='Correlación'>
+        data-slide=15 title='Distribución de variables categóricas'>
          15
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=16 title='Distribución de variables categóricas'>
+         16
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=17 title='Exploración de dos variables'>
+         17
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=18 title='Correlación'>
+         18
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=19 title='Correlación en R'>
+         19
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=20 title='Promedios condicionales'>
+         20
       </a>
     </li>
   </ul>
